frontend/src/utils/single-entry/single-entry.component.scss
.single-entry {
    display: flex;
    flex-direction: column;
    width: 100%;
    h1 {
        margin: auto;
        margin-top: 2rem;
        margin-bottom: 2rem;
    }
    div[name="author"], div[name="editButtons"] {
        display: flex;
        justify-content: flex-end;
        margin-right: 10%;
    }
    img {
        margin: auto;
        max-width: 100%;
    }
    markdown {
        margin-left: 10%;
        margin-right: 10%;
        margin-bottom: 5%;
        text-align: justify;
        max-width: 100%;
    }
}

